--- a/index.html
+++ b/index.html
@@ -10,3 +10,10 @@
         <input type="submit" value="Submit Bug Report">
     </form>
 </div>
+form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 5px 0 15px 0;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+}
